add_library (inverse OBJECT
  IPDesignVariableParameterization.cc
  IPTwoBlockVec.cc
  IP_SSAHardavForwardProblem.cc
  IP_SSAHardavTaoTikhonovProblem.cc
  IP_SSATaucForwardProblem.cc
  IP_SSATaucTaoTikhonovProblem.cc
  IP_SSATaucTaoTikhonovProblemLCL.cc
  IP_SSATaucTikhonovGNSolver.cc
  TaoUtil.cc
  functional/IPFunctional.cc
  functional/IPGroundedIceH1NormFunctional.cc
  functional/IPLogRatioFunctional.cc
  functional/IPLogRelativeFunctional.cc
  functional/IPMeanSquareFunctional.cc
  functional/IPTotalVariationFunctional.cc
  functional/IP_H1NormFunctional.cc
  functional/IP_L2NormFunctional.cc
  )
